<resources>
    <string name="app_name">信息发布</string>
    <string name="menu_btn_setting">软件设置</string>
    <string name="exit">退出</string>
    <string name="menu_tips">( 请使用小程序扫码绑定 )</string>
    <string name="wechat_tips">( 请使用微信扫码关注 )</string>
    <string name="work_net_down">网络下发</string>
    <string name="work_net_load">网络导入(U盘)</string>
    <string name="work_single">单机模式</string>
    <string name="network_error">网络异常</string>
    <string name="exit_app">退出APP</string>
    <string name="exit_password">密码验证</string>
    <string name="exit_play">退出播放</string>
    <string name="password_error">密码错误</string>
    <string name="submit">确认</string>
    <string name="next">下一步</string>
    <string name="server_conn_success">服务器连接成功</string>
    <string name="net_work_connect">服务器连接</string>
    <string name="intent_setting">属性设置</string>
    <string name="net_task_load">网络导入</string>
    <string name="app_setting">功能设置</string>
    <string name="net">网络: </string>
    <string name="server">服务器: </string>
    <string name="count">账号: </string>
    <string name="username">用户名</string>
    <string name="username_tips">( 如果是分配账号,请写服务器登录账号 )</string>
    <string name="line_log">还原</string>
    <string name="connect_ed">已连接</string>
    <string name="un_connect">未连接</string>
    <string name="hdmi_in_support_not">当前不支持HDMI IN</string>
    <string name="wifi_set">WIFI设置</string>
    <string name="intent_settings">以太网设置</string>
    <string name="app_start">程序启动中</string>
    <string name="check_timer">定时检查中</string>
    <string name="task_play">任务播放</string>
    <string name="dev_position">设备位置</string>
    <string name="device_name">设备名称</string>
    <string name="web_refresh_auto">网页设置</string>
    <string name="device_id">设备编号</string>
    <string name="touch_back">触摸返回(场景)</string>
    <string name="interval_time">间隔时间: 节目设置</string>
    <string name="query">查看</string>
    <string name="modify">修改</string>
    <string name="qr_code">二维码</string>
    <string name="power_on_off">定时开关机</string>
    <string name="sdcard_size">存储空间</string>
    <string name="screen_size">屏幕设置</string>
    <string name="screen_show">显示类型</string>
    <string name="daemon">守护进程</string>
    <string name="out_check">外置存储检测</string>
    <string name="language_setting">语言设置</string>
    <string name="whaterer_change_language">是否切换语言 > </string>
    <string name="screen_more_line">多屏联动</string>
    <string name="apk_jump_back">APK跳转返回</string>
    <string name="apk_jump_content">是否添加APK跳转返回功能?\n该操作会向系统目录写入文件，仅限RK-3288使用此功能</string>
    <string name="show_canvas">绘图板显示(互动)</string>
    <string name="version_information">版本信息</string>
    <string name="connect_auto">自动连接</string>
    <string name="password">密码</string>
    <string name="connect">连接</string>
    <string name="auto_update_time">网络模式自动同步服务器时间</string>
    <string name="net_sync_server">(联网同步服务器)</string>
    <string name="open_time">开机时间</string>
    <string name="close_time">关机时间</string>
    <string name="monday">周一</string>
    <string name="thuesday">周二</string>
    <string name="wedsday">周三</string>
    <string name="thurday">周四</string>
    <string name="friday">周五</string>
    <string name="satuday">周六</string>
    <string name="sunday">周日</string>
    <string name="no_data">暂无数据</string>
    <string name="clear">清除</string>
    <string name="add">增加</string>
    <string name="delete">删除</string>
    <string name="log_power">开关机日志</string>
    <string name="load_word">导出文档</string>
    <string name="save_time">保存时间</string>
    <string name="storage">存储空间</string>
    <string name="if_del_power">是否删除该定时？</string>
    <string name="if_modify_power">是否需要修改该定时开关机？</string>
    <string name="clear_memory">清理内存</string>
    <string name="file_manager">文件管理</string>
    <string name="start_ckeckout">开始检测外置存储</string>
    <string name="no_sdmemory">开始检测外置存储</string>
    <string name="check_usb">检测到当前插入的设备===> USB存储</string>
    <string name="check_sd">检测到当前插入的设备===> SD存储</string>
    <string name="no_filematch">外置设备没有相应的文件</string>
    <string name="load_success">导出成功</string>
    <string name="load_failed">导出失败</string>
    <string name="guardian_name">守护进程</string>
    <string name="guardian_statues">守护状态</string>
    <string name="boot_up">开机启动</string>
    <string name="hardware_speedup">硬件加速</string>
    <string name="guardian_time">守护时间</string>
    <string name="back_setting">背光测试</string>
    <string name="light_setting">亮度调节</string>
    <string name="screen_roate_num">旋转角度</string>
    <string name="version_num">版本号</string>
    <string name="open">开启</string>
    <string name="screen_same">同步服务器</string>
    <string name="uninstall">卸载</string>
    <string name="close">关闭</string>
    <string name="show">显示</string>
    <string name="hiddle">隐藏</string>
    <string name="backup">备份</string>
    <string name="guardian_line_failed">守护进程连接失败</string>
    <string name="guardian_no_install">守护进程连接失败</string>
    <string name="modify_guatime">修改守护进程间隔时间</string>
    <string name="please_insert">请输入！</string>
    <string name="insert_less">请输入小于50位数字符！</string>
    <string name="modifu_success">修改成功！</string>
    <string name="modify_tips">请设定大于 30 秒得守护时间 ！</string>
    <string name="modify_max_tips">请设定小于 999999 秒得守护时间 ！</string>
    <string name="modifu_failed">修改失败！</string>
    <string name="load_data">获取数据中...</string>
    <string name="deal">处理中...</string>
    <string name="get_power_success">定时开关机成功</string>
    <string name="get_power_failed">定时开关机失败</string>
    <string name="type">类型</string>
    <string name="model">模式</string>
    <string name="name">名称</string>
    <string name="play_week">周期</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="send_time">发送时间</string>
    <string name="deal_model">操作</string>
    <string name="deal_network">请在非网络模式下操作</string>
    <string name="clear_success">清理成功</string>
    <string name="if_cleartask">是否清理播放任务</string>
    <string name="if_del_program">是否删除改节目</string>
    <string name="del_failed">删除失败</string>
    <string name="del_success">删除成功</string>
    <string name="set_success">设置成功！</string>
    <string name="use_info">使用说明</string>
    <string name="use_one">1: 设置工作模式-->网络导入模式</string>
    <string name="use_two">2: 从服务器导出任务(如下图)</string>
    <string name="use_three">3: 将下载的etv-disonline压缩包拷贝到U盘根目录</string>
    <string name="use_tips">( etv-disonline.zip !!!不用解压!!! )</string>
    <string name="use_four">4: 将U盘插入设备,设备自动解压任务</string>
    <string name="use_five">5: 设备操作完毕自动退出,拔出U盘即可</string>
    <string name="program_info">节目信息</string>
    <string name="pic">图片</string>
    <string name="video">视频</string>
    <string name="word">文档</string>
    <string name="play_set">播放设置</string>
    <string name="videovoice_num">视频音量</string>
    <string name="videoback_num">背景音量</string>
    <string name="pic_distance">图片间隔时间</string>
    <string name="pic_distance_type">图片缩放类型</string>
    <string name="video_distance_type">视频缩放类型</string>
    <string name="touch_show_type">图片动画时间</string>
    <string name="double_image_roate">副屏截图角度</string>
    <string name="double_screen_type">双屏异显适配</string>
    <string name="default_size_show">原尺寸显示</string>
    <string name="ajust_screen">强制适配</string>
    <string name="Interface_reverse">界面反向</string>
    <string name="long_width_change">长宽互置</string>
    <string name="wps_distance">文档间隔时间</string>
    <string name="layout_chooice">主屏布局</string>
    <string name="layout_chooice_second">副屏布局</string>
    <string name="all_screen_change">全屏拉伸</string>
    <string name="size_screen_change">比例拉伸</string>
    <string name="default_show_type">默认显示</string>
    <string name="forword_show_type">导向图</string>
    <string name="single_one">1: 设置工作模式-->单机模式</string>
    <string name="single_two">2: 在U盘根目录新建文件夹etv-media</string>
    <string name="single_three">3: 将图片.视频拷贝到该目录</string>
    <string name="single_four">4: 将U盘插入设备即可</string>
    <string name="single_five">5: 拷贝完成拔出U盘完成</string>
    <string name="single_six">6:播放顺序按照数字字母先后排序</string>
    <string name="set_anim">设置动画: </string>
    <string name="layout_id">布局ID</string>
    <string name="pic_anim">图片切换动画</string>
    <string name="refreshing">数据刷新中</string>
    <string name="no_poweronoff">没有定时开关机数据</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="get_power_error">获取定时选项失败，请联系售后</string>
    <string name="default_anim">默认效果</string>
    <string name="trans_change">透明渐变</string>
    <string name="right_left">右到左</string>
    <string name="left_right">左到右</string>
    <string name="up_bottom">上到下</string>
    <string name="bottom_up">下到上</string>
    <string name="hand_qin">手风琴挤压</string>
    <string name="big_change">放大渐变</string>
    <string name="small_change">缩小渐变</string>
    <string name="threed_in">3D旋转进</string>
    <string name="threed_out">3D旋转出</string>
    <string name="front_change">景深渐变</string>
    <string name="left_riroate">左右旋转</string>
    <string name="topbom_riroate">上下旋转</string>
    <string name="nishz_riroate">逆时针旋转</string>
    <string name="shunsz_riroate">顺时针旋转</string>
    <string name="topbom_small">上下缩放</string>
    <string name="three_paint">3D画框效果</string>
    <string name="small_changesize">缩放渐变</string>
    <string name="big_changesize">放大消隐动画</string>
    <string name="trans_changesize">渐变透明</string>
    <string name="change_small">渐变缩放</string>
    <string name="time_morethree">请设置大于 5 秒的时间</string>
    <string name="time_lesstentyhousand">请设置小于 10001 秒的时间</string>
    <string name="net_error">网络异常</string>
    <string name="querying">查询中</string>
    <string name="line_auto_tips">此操作仅在局域网下可行,请知悉！</string>
    <string name="input_ip">请输入Ip</string>
    <string name="change_success">切换成功，请点击连接</string>
    <string name="nodate_insert">当前没有记录，请手动输入</string>
    <string name="query_success">检索成功</string>
    <string name="regsucc_line">注册成功,连接中...</string>
    <string name="regfail_line">设备注册失败:  %s  </string>
    <string name="modify_port">修改端口号</string>
    <string name="single_errror">单机模式不能连接服务器</string>
    <string name="savesucc_line">保存成功，准备连接中</string>
    <string name="linging">连接中...</string>
    <string name="connect_log">连接记录</string>
    <string name="all_choice">全选</string>
    <string name="socket_net_shut">连接断开,尝试重新连接</string>
    <string name="socket_no_net">没有网络，不去连接服务器</string>
    <string name="registe_failed">注册服务器失败 :  %s </string>
    <string name="resucc_preline">注册服务器成功,准备进行连接</string>
    <string name="line_webing">正在连接中...</string>
    <string name="line_web_error">连接服务器异常:  %s </string>
    <string name="get_actionfailed">获取用户意图失败</string>
    <string name="modify_action_ip">用户意图:修改IP</string>
    <string name="nonet_adb">无线ADB调试</string>
    <string name="net_total_add">流量统计</string>
    <string name="show_net_load">网络导入任务</string>
    <string name="update_info">升级说明</string>
    <string name="soft_manager">软件管理</string>
    <string name="setting_default">设置</string>
    <string name="hiddle_setting">隐藏设置</string>
    <string name="capture_quetity">截图上传质量</string>
    <string name="capture_update_height">截图上传</string>
    <string name="wps_distance_type">文档缩放类型</string>
    <string name="wps_anim_type">文档切换类型</string>
    <string name="play_total_update">播放统计</string>
    <string name="update_web_bgg">同步壁纸</string>
    <string name="control_center">控制中心</string>
    <string name="task_touch">互动任务</string>
    <string name="info_from">数据来源</string>
    <string name="video_more_size">4K视频</string>
    <string name="auto_clear_cache">清理缓存</string>
    <string name="plan_no_person">无人计划</string>
    <string name="blue_theeth">蓝牙</string>
    <string name="reboot_start">软件重启生效</string>
    <string name="image_show_tyle">图片加载框架</string>
    <string name="wps_show">显示文档</string>
    <string name="dev_info">设备信息</string>
    <string name="screen_dips">屏幕分辨率</string>
</resources>