<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rela_bgg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground">

    <LinearLayout
        android:id="@+id/lin_exit"
        style="@style/setting_exit_layout">

        <ImageView style="@style/setting_exit_image" />

        <TextView
            android:id="@+id/tv_exit"
            style="@style/setting_exit_txt" />
    </LinearLayout>

    <ScrollView
        style="@style/setting_fragment_lin"
        android:padding="@dimen/dimen_10">

        <LinearLayout style="@style/setting_fragment_lin">

            <TextView
                android:id="@+id/tv_hiddle_title"
                style="@style/setting_title_desc"
                android:text="@string/hiddle_setting" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <com.ys.model.view.SettingClickView
                android:id="@+id/btn_exit_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:btn_txt_right="@string/setting_default"
                app:img_left="@mipmap/hiddle_password"
                app:txt_content=""
                app:txt_title="@string/exit_password" />

            <com.ys.model.view.SettingClickView
                android:id="@+id/btn_adb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:btn_txt_right="@string/setting_default"
                app:img_left="@mipmap/hiddle_no_line"
                app:txt_content=""
                app:txt_title="@string/nonet_adb" />

            <com.ys.model.view.SettingClickView
                android:id="@+id/btn_net_load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:btn_txt_right="@string/setting_default"
                app:img_left="@mipmap/hiddle_show_hiddle"
                app:txt_content=""
                app:txt_title="@string/show_net_load" />

            <com.ys.model.view.SettingClickView
                android:id="@+id/btn_update_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:btn_txt_right="@string/setting_default"
                app:img_left="@mipmap/hiddle_introduce"
                app:txt_content=""
                app:txt_title="@string/update_info" />

            <com.ys.model.view.SettingClickView
                android:id="@+id/btn_app_manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:btn_txt_right="@string/setting_default"
                app:img_left="@mipmap/hiddle_ic_launcher"
                app:txt_content=""
                app:txt_title="@string/soft_manager" />

            <com.ys.model.view.SettingClickView
                android:id="@+id/btn_capture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:btn_txt_right="@string/setting_default"
                app:img_left="@mipmap/hiddle_ic_launcher"
                app:txt_content=""
                app:txt_title="@string/capture_update_height" />

            <com.ys.model.view.SettingClickView
                android:id="@+id/btn_dev_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:btn_txt_right="@string/setting_default"
                app:img_left="@drawable/ter_icon_dev"
                app:txt_content=""
                app:txt_title="@string/dev_info" />

            <com.ys.model.view.SettingClickView
                android:id="@+id/btn_setting_dips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:btn_txt_right="@string/setting_default"
                app:img_left="@drawable/ter_icon_dev"
                app:txt_content=""
                app:txt_title="@string/screen_dips" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>